syntax = "proto3";

package auth;

option go_package = "toxictoast/services/auth-service/api/proto";

import "google/protobuf/timestamp.proto";

// Auth Service - Authentication & Authorization
service AuthService {
  // Authentication
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);

  // Role Management
  rpc CreateRole(CreateRoleRequest) returns (RoleResponse);
  rpc GetRole(GetRoleRequest) returns (RoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  // Permission Management
  rpc CreatePermission(CreatePermissionRequest) returns (PermissionResponse);
  rpc GetPermission(GetPermissionRequest) returns (PermissionResponse);
  rpc UpdatePermission(UpdatePermissionRequest) returns (PermissionResponse);
  rpc DeletePermission(DeletePermissionRequest) returns (DeleteResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);

  // RBAC Operations
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
  rpc RevokeRole(RevokeRoleRequest) returns (RevokeRoleResponse);
  rpc AssignPermission(AssignPermissionRequest) returns (AssignPermissionResponse);
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse);

  // Authorization Checks
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
  rpc ListUserRoles(ListUserRolesRequest) returns (ListUserRolesResponse);
  rpc ListUserPermissions(ListUserPermissionsRequest) returns (ListUserPermissionsResponse);
  rpc ListRolePermissions(ListRolePermissionsRequest) returns (ListRolePermissionsResponse);
}

// Authentication Messages

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  optional string first_name = 4;
  optional string last_name = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  UserClaims user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserClaims user = 2;
  repeated string roles = 3;
  repeated string permissions = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message UserClaims {
  string user_id = 1;
  string email = 2;
  string username = 3;
  repeated string roles = 4;
  repeated string permissions = 5;
}

// Role Messages

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message UpdateRoleRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
}

message GetRoleRequest {
  string id = 1;
}

message DeleteRoleRequest {
  string id = 1;
}

message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message RoleResponse {
  Role role = 1;
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

// Permission Messages

message Permission {
  string id = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreatePermissionRequest {
  string resource = 1;
  string action = 2;
  string description = 3;
}

message UpdatePermissionRequest {
  string id = 1;
  optional string resource = 2;
  optional string action = 3;
  optional string description = 4;
}

message GetPermissionRequest {
  string id = 1;
}

message DeletePermissionRequest {
  string id = 1;
}

message ListPermissionsRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string resource = 3;
}

message PermissionResponse {
  Permission permission = 1;
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
  int32 total = 2;
}

// RBAC Messages

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message AssignRoleResponse {
  bool success = 1;
  string message = 2;
}

message RevokeRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message RevokeRoleResponse {
  bool success = 1;
  string message = 2;
}

message AssignPermissionRequest {
  string role_id = 1;
  string permission_id = 2;
}

message AssignPermissionResponse {
  bool success = 1;
  string message = 2;
}

message RevokePermissionRequest {
  string role_id = 1;
  string permission_id = 2;
}

message RevokePermissionResponse {
  bool success = 1;
  string message = 2;
}

message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse {
  bool allowed = 1;
}

message ListUserRolesRequest {
  string user_id = 1;
}

message ListUserRolesResponse {
  repeated Role roles = 1;
}

message ListUserPermissionsRequest {
  string user_id = 1;
}

message ListUserPermissionsResponse {
  repeated Permission permissions = 1;
}

message ListRolePermissionsRequest {
  string role_id = 1;
}

message ListRolePermissionsResponse {
  repeated Permission permissions = 1;
}

// Common Messages

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
